--- a/src/components/layout/Footer.scss
+++ b/src/components/layout/Footer.scss
@@ -2,7 +2,7 @@
 footer {
     height: 50px;
     padding: 0 5px;
-    background: LimeGreen;
+    background: #00A387;
     display: flex;
     align-items: center;
     justify-content: center;
