--- a/src/components/layout/Header.scss
+++ b/src/components/layout/Header.scss
@@ -1,10 +1,9 @@
 header {
-    padding: 0px;
-    background: Black;
-
+    padding: 0px 30px;
+    background: #00A387;
+    font-size: 10px;
+    padding-top: 10px;
 
     h1 {color: white;}
-    p.welcome {color: limegreen;
-    
-    }
+    p.welcome {color: #00A387;}
 }
