--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,5 +1,5 @@
 div.cardContainer {
-    border: 1px solid LightGray;
+    border: 3px solid #F5F6F8;
     border-radius: 3px;
     padding: 20px 20px;
   
