--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -4,7 +4,7 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Helvetica", sans-serif;
 }
 
 div.layout {
