--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -1,8 +1,12 @@
 div.moduleCard {
-    width: 250px;
-    height: 300px;
-  }
+  width: 250px;
+  height: 300px;
+}
 
-  .moduleCard:hover {
-    transform: scale(1.1);
-}  
+.moduleCard:hover {
+  transform: scale(1.1);
+}
+.moduleCardItems h3 {
+  font-size: 1.25rem;
+  color: rgb(11, 133, 133);
+}
