--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,21 +1,31 @@
 div.cardContainer {
-    border: 3px solid #F5F6F8;
-    border-radius: 3px;
-    padding: 20px 20px;
-  
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-  
-    div.card {
+  border: 3px solid #f5f6f8;
+  border-radius: 3px;
+  padding: 20px 20px;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+
+  div.card {
+    width: 100%;
+    height: 100%;
+
+    border: 1px solid LightGray;
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px 4px rgba(70, 70, 70, 0.3);
+
+    .moduleImage img {
       width: 100%;
       height: 100%;
-      padding: 10px;
-      border: 1px solid LightGray;
-      border-radius: 5px;
-      box-shadow: 4px 4px 8px 4px rgba(70,70,70,0.3);
-  
-      img { width: 100%; display: block; border-radius: 0px 0px 3px 3px }
+      display: block;
+      border-radius: 5px 5px 0px 0px;
+    }
+
+    .moduleCardItems h3 {
+      color: rgb(6, 151, 144);
+      padding: 6px 3px 3px 6px;
     }
   }
+}
