--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -6,7 +6,24 @@ div.moduleCard {
 .moduleCard:hover {
   transform: scale(1.1);
 }
+.moduleImage img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 5px 5px 0px 0px;
+}
+
 .moduleCardItems h3 {
-  font-size: 1.25rem;
-  color: rgb(11, 133, 133);
+  color: rgb(6, 151, 144);
+  padding: 6px 3px 3px 6px;
+}
+
+.actions button {
+  border-radius: 50px;
+  padding: 10px 15px;
+  cursor: pointer; /*show a pointer cursor*/
+  color: light gray;
+  border: none;
+  background-color: gray;
+  margin: 0px 2px 2px 4px;
 }
