--- a/src/components/views/Students.scss
+++ b/src/components/views/Students.scss
@@ -1,3 +1,14 @@
 div.studentCard {
-    width: 200px;
-  }
+  width: 200px;
+}
+.studentImage img {
+  width: 100%;
+  height: 100%;
+  display: block;
+  border-radius: 5px 5px 0px 0px;
+}
+
+.studentCardItems h3 {
+  color: rgb(6, 151, 144);
+  padding: 6px 3px 3px 6px;
+}
