--- a/src/components/layout/Layout.scss
+++ b/src/components/layout/Layout.scss
@@ -1,21 +1,14 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: "Helvetica", sans-serif;
-}
+@import "../../global.scss";
 
 div.layout {
   height: 100vh;
-  background: red;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto 1fr auto;
 
   main { 
-    padding: 20px; 
-    background: White;
+    margin: 40px 100px;
+    border-radius: 10px;
+    background-color: $white;
   }
 }
