--- a/src/components/layout/Navbar.scss
+++ b/src/components/layout/Navbar.scss
@@ -1,22 +1,26 @@
-nav {
-    padding: 8px;
-    background: white;
-    display: flex;
-    gap: 35px;
-    border-bottom: 3px solid lightgray;
+@import "../../global.scss";
 
-  
-    div.navItem a {
-      color: lightgray;
-      text-decoration: none;
-      font-weight: 400;
-    
-      &:hover {
-        color: Black;
-        text-decoration: underline;
-        text-decoration-color: #00A387;
-        text-decoration-thickness: 0.2em;
-      }
-    }
-  
-  }
+.navbar {
+  height: 60px;
+  display: flex;
+  align-items: center;
+  background-color: #ffffff;
+  box-shadow: $box-shadow;
+  padding: 0 100px;
+}
+
+.navItem {
+  margin-right: 60px;
+}
+
+.navItem a {
+  text-decoration: none;
+  color: $gray;
+}
+
+.navItem a.active {
+  color: black;
+  border-bottom: 2px solid $green;
+  padding-bottom: 20px;
+  border-radius: 2;
+}
