--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,31 +1,24 @@
-div.cardContainer {
-  border: 3px solid #f5f6f8;
+.cardContainer {
   border-radius: 3px;
-  padding: 20px 20px;
-
+  padding: 40px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
+  gap: 60px;
 
-  div.card {
+  .card {
+    position: relative;
     width: 100%;
-    height: 100%;
-
-    border: 1px solid LightGray;
-    border-radius: 5px;
-    box-shadow: 4px 4px 8px 4px rgba(70, 70, 70, 0.3);
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
 
     .moduleImage img {
       width: 100%;
-      height: 100%;
+      height:145px;
       display: block;
       border-radius: 5px 5px 0px 0px;
     }
 
-    .moduleCardItems h3 {
-      color: rgb(6, 151, 144);
-      padding: 6px 3px 3px 6px;
-    }
+    
   }
 }
