--- a/src/components/layout/Header.scss
+++ b/src/components/layout/Header.scss
@@ -1,9 +1,24 @@
-header {
-    padding: 0px 30px;
-    background: #00A387;
-    font-size: 10px;
-    padding-top: 10px;
+@import "../../global.scss";
 
-    h1 {color: white;}
-    p.welcome {color: #00A387;}
+header {
+  padding: 0px 100px;
+  background:$green;
+  font-size: 10px;
+  height: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  .logo img {
+    height: 60px;
+  }
+  .login a {
+    text-decoration: none;
+    color: $white;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  span {
+    color:$black;
+  }
 }
