--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -1,29 +1,57 @@
-div.moduleCard {
+@import "../../global.scss";
+
+.pageTitle {
+  font-size: 28px;
+  font-weight: 400;
+  padding: 20px;
+  border-bottom: 2px solid $lightGray;
+}
+
+.moduleCard {
+  display: flex;
+  align-items: self-start;
   width: 250px;
   height: 300px;
-}
+  transition: all 1s ease;
 
-.moduleCard:hover {
-  transform: scale(1.1);
-}
-.moduleImage img {
-  width: 100%;
-  height: 100%;
-  display: block;
-  border-radius: 5px 5px 0px 0px;
-}
+  .moduleCardItems {
+    padding: 15px;
 
-.moduleCardItems h3 {
-  color: rgb(6, 151, 144);
-  padding: 6px 3px 3px 6px;
-}
+    h3 {
+      color: $black;
+      font-size: 16px;
+      font-weight: 500;
+    }
+    h4 {
+      color: $gray;
+      font-size: 14px;
+      font-weight: 400;
+      margin-top: 10px;
+    }
+  }
 
-.actions button {
-  border-radius: 50px;
-  padding: 10px 15px;
-  cursor: pointer; /*show a pointer cursor*/
-  color: light gray;
-  border: none;
-  background-color: gray;
-  margin: 0px 2px 2px 4px;
+  .actions {
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    width: 100%;
+    padding: 0 20px;
+
+    button {
+      height: 32px;
+      width: 32px;
+      border-radius: 50%;
+      cursor: pointer;
+      color: $black;
+      border: none;
+      background-color: $shade;
+    }
+  }
+  &:hover {
+    transform: scale(1.1);
+    transition: all 1s ease;
+  }
 }
