--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,22 +1,25 @@
 .cardContainer {
   border-radius: 3px;
-  padding: 40px;
+  height: 500px;
+  padding: 30px;
   display: flex;
   flex-wrap: wrap;
   gap: 60px;
 
   .card {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
-
-    .moduleImage img {
+    .card {
+      position: relative;
       width: 100%;
-      height: 145px;
-      display: block;
-      border-radius: 5px 5px 0px 0px;
+      height: 300px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
+
+      .moduleImage img {
+        width: 100%;
+        height: 145px;
+        display: block;
+        border-radius: 5px 5px 0px 0px;
+      }
     }
   }
 }
