--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -17,6 +17,11 @@
   .moduleCardItems {
     padding: 15px;
 
+    .moduleCardItems h3 {
+      color: rgb(6, 151, 144);
+      padding: 6px 3px 3px 6px;
+    }
+
     h3 {
       color: $black;
       font-size: 16px;
