Adding and Editing Groups.scss

--- a/src/components/views/Groups.scss
+++ b/src/components/views/Groups.scss
@@ -30,7 +30,7 @@
     }
 
     button {
-        border-radius: 5cap;
+        border-radius: 5px;
         margin: 20px 40px;
         align-items: center;
         padding: 5px 5px;
