--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -8,7 +8,7 @@
 
   .card {
     position: relative;
-    width: 100%;
+    max-width: 400%;
     height: 300px;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
