--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,23 +1,16 @@
 .cardContainer {
   border-radius: 3px;
-
   padding: 30px;
   display: flex;
   flex-wrap: wrap;
-  gap: 60px;
 
   .card {
     position: relative;
-    max-width: 400%;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
-
-    .moduleImage img {
-      width: 100%;
-      height: 145px;
-      display: block;
-      border-radius: 5px 5px 0px 0px;
-    }
+    align-items: center;
+    // gap: 30px;
   }
 }
