--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -10,11 +10,20 @@
 .moduleCard {
   display: flex;
   align-items: self-start;
-  width: 250px;
-  height: 300px;
-  max-width: 200px;
-  max-height: 300px;
+  width: 300px;
+  height: 350px;
   transition: all 1s ease;
+
+  .moduleImage {
+    height: 60%;
+  }
+
+  .moduleImage img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 5px 5px 0px 0px;
+  }
 
   .moduleCardItems {
     padding: 15px;
@@ -33,26 +42,26 @@
     }
   }
 
-  .actions {
-    position: absolute;
-    bottom: 14px;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-content: center;
-    width: 100%;
-    padding: 0 20px;
+  // .actions {
+  //   position: absolute;
+  //   bottom: 14px;
+  //   left: 0;
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-content: center;
+  //   width: 100%;
+  //   padding: 0 20px;
 
-    button {
-      height: 20px;
-      width: 40px;
-      border-radius: 15%;
-      cursor: pointer;
-      color: $black;
-      border: 1px solid rgba(158, 154, 167, 0.971);
-      background-color: $shade;
-    }
-  }
+  //   button {
+  //     height: 20px;
+  //     width: 40px;
+  //     border-radius: 15%;
+  //     cursor: pointer;
+  //     color: $black;
+  //     border: 1px solid rgba(158, 154, 167, 0.971);
+  //     background-color: $shade;
+  //   }
+  // }
   &:hover {
     transform: scale(1.1);
     transition: all 1s ease;
