--- a/src/components/views/Modules.scss
+++ b/src/components/views/Modules.scss
@@ -10,19 +10,19 @@
 .moduleCard {
   display: flex;
   align-items: self-start;
-  width: 300px;
+  width: 230px;
   height: 350px;
   transition: all 1s ease;
 
   .moduleImage {
-    height: 60%;
-  }
+    height: 65%;
 
-  .moduleImage img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    border-radius: 5px 5px 0px 0px;
+    img {
+      width: 100%;
+      height: 100%;
+      display: block;
+      border-radius: 5px 5px 0px 0px;
+    }
   }
 
   .moduleCardItems {
@@ -39,6 +39,7 @@
       font-size: 14px;
       font-weight: 400;
       margin-top: 10px;
+      padding: 6px 3px 3px 6px;
     }
   }
 
@@ -64,6 +65,6 @@
   // }
   &:hover {
     transform: scale(1.1);
-    transition: all 1s ease;
+    transition: all 0.5s ease;
   }
 }
