--- a/src/components/views/Groups.scss
+++ b/src/components/views/Groups.scss
@@ -27,3 +27,18 @@
     padding: 5px;
   }
 }
+
+.button-backModules button {
+  padding: 10px 20px;
+  background-color: #00a387;
+  margin: 5px 5px 5px 30px;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: blueviolet;
+  }
+}
