--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -1,16 +1,25 @@
-.cardContainer {
-  border-radius: 3px 5px 5px 5px;
-  padding: 30px;
+div.cardContainer {
+  border: 1px solid lightgray;
+  border-radius: 3px;
+  padding: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 50px;
-  align-items: center;
+  justify-content: center;
+  gap: 20px;
 
-  .card {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgb(0 0 0 / 0.2);
+  div.card {
+      width: 100%;
+      height: 100%;
+      padding: 10px;
+      border: 1px solid lightgray;
+      border-radius: 5px;
+      box-shadow: 4px 4px 8px 4px rgba(70,70,70,0.3);
+
+      .moduleImage img {
+          width: 100%;
+          height: 145px;
+          display: block;
+          border-radius: 5px 5px 0px 0px;
+      }
   }
 }
