--- a/src/components/Entity/Module/ModuleCard.scss
+++ b/src/components/Entity/Module/ModuleCard.scss
@@ -35,14 +35,14 @@
   }
 
   .actions {
-    position: absolute;
-    bottom: 15px;
-    left: 0;
+    //position: absolute;
+    //bottom: 15px;
+    //left: 0;
     display: flex;
     justify-content: space-between;
     align-content: center;
     width: 100%;
-    padding: 0px 20px;
+    padding: 15px 10px;
 
     button {
       height: 30px;
