--- a/src/components/views/Groups.scss
+++ b/src/components/views/Groups.scss
@@ -1,4 +1,7 @@
 @import "../../global.scss";
+h1 {
+  padding: 30px;
+}
 
 .groupCard {
   display: flex;
@@ -6,40 +9,39 @@
   margin-bottom: 20px;
 }
 
-.groupHeader {
-  cursor: pointer;
-  h3 {
-    margin: 0;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #f2f2f2;
-  }
-}
+// .groupHeader {
+//   cursor: pointer;
+//   h3 {
+//     margin: 0;
+//     padding: 10px;
+//     border-radius: 10px;
+//     background-color: #f2f2f2;
+//   }
+// }
 
-.groupDropdown {
-  background-color: #f8f8f8;
-  padding: 10px;
-  margin-top: 10px;
-  border-radius: 10px;
+// .groupDropdown {
+//   background-color: #f8f8f8;
+//   padding: 10px;
+//   margin-top: 10px;
+//   border-radius: 10px;
 
-  p {
-    margin: 0;
-    padding: 5px;
-  }
-}
+//   p {
+//     margin: 0;
+//     padding: 5px;
+//   }
+// }
 
 .button-backModules button {
-    padding: 10px 20px;
-    background-color: #00a387;
-    margin: 5px 5px 5px 30px;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-  
-    &:hover {
-      background-color: blueviolet;
-    }
+  padding: 10px 20px;
+  background-color: #00a387;
+  margin: 5px 5px 5px 30px;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+    background-color: blueviolet;
   }
-  
+}
