--- a/src/components/Entity/Module/ModuleCard.scss
+++ b/src/components/Entity/Module/ModuleCard.scss
@@ -14,9 +14,15 @@
   height: 280px;
   transition: all 1s ease;
 
+  .moduleImage img {
+    width: 101%;
+    height: 145px;
+    display: block;
+    border-radius: 5px 5px 0px 0px;
+  }
 
   .moduleCardItems {
-    padding: 5px ;
+    padding: 5px;
 
     h3 {
       color: $black;
@@ -30,7 +36,6 @@
       font-weight: 400;
       margin-top: 0px;
       padding: 6px 3px 0px 6px;
-
     }
   }
 
@@ -51,8 +56,7 @@
       cursor: pointer;
       color: $white;
       border: none;
-      background-color: #00A387;
-      ;
+      background-color: #00a387;
       padding: 0px 8px;
       margin: 0px 0px;
       align-items: center;
