--- a/src/components/Entity/User/UserCard.scss
+++ b/src/components/Entity/User/UserCard.scss
@@ -14,6 +14,13 @@
   height: 320px;
   transition: all 1s ease;
 
+  .userImage img {
+    width: 101%;
+    height: 50%;
+    display: block;
+    border-radius: 5px 5px 0px 0px;
+  }
+
   .userCardItems {
     padding: 5px;
 
