--- a/src/components/UI/Card.scss
+++ b/src/components/UI/Card.scss
@@ -8,18 +8,11 @@ div.cardContainer {
   gap: 20px;
 
   div.card {
-      width: 100%;
-      height: 100%;
-      padding: 00px;
-      border: 1px solid lightgray;
-      border-radius: 5px;
-      box-shadow: 4px 4px 8px 4px rgba(70,70,70,0.3);
-
-      .moduleImage img {
-          width: 100%;
-          height: 145px;
-          display: block;
-          border-radius: 5px 5px 0px 0px;
-      }
+    width: 100%;
+    height: 100%;
+    padding: 00px;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px 4px rgba(70, 70, 70, 0.3);
   }
 }
