--- a/src/components/Entity/User/UserCard.scss
+++ b/src/components/Entity/User/UserCard.scss
@@ -14,11 +14,14 @@
   height: 320px;
   transition: all 1s ease;
 
-  .userImage img {
-    width: 101%;
-    height: 50%;
-    display: block;
-    border-radius: 5px 5px 0px 0px;
+  .userImage {
+    align-items: end;
+    img {
+      width: 100%;
+      height: 60%;
+      display: block;
+      border-radius: 5px 5px 0px 0px;
+    }
   }
 
   .userCardItems {
