--- a/src/components/views/Login.scss
+++ b/src/components/views/Login.scss
@@ -3,6 +3,7 @@ div.inputContainer {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   height: 50vh;
   margin-top: 20px;
 }
