--- a/src/components/views/GroupInfo.scss
+++ b/src/components/views/GroupInfo.scss
@@ -1,21 +1,34 @@
 @import "../../global.scss";
 
 .button-CoLo button {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 10px;
-  
-      padding: 10px 20px;
-      background-color: #00a387;
-      margin: 5px 5px 5px 30px;
-      color: black;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      transition: background-color 0.3s ease; 
-}
-  
-.button-CoLo button:hover {
-        background-color: blueviolet;
-      }
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 10px;
 
+  padding: 10px 20px;
+  background-color: #00a387;
+  margin: 5px 5px 5px 30px;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button-CoLo button:hover {
+  background-color: blueviolet;
+}
+
+.userGrid {
+  display: grid;
+  column-rule: 4px solid black;
+  gap: 4px;
+  grid-auto-flow: column;
+  grid-template-rows: auto;
+  //grid-template-columns: auto auto auto;
+  .userGridItem {
+    display: inline;
+    //width: 10%;
+    border-bottom: 4px solid black;
+  }
+}
