--- a/src/components/views/Groups.scss
+++ b/src/components/views/Groups.scss
@@ -13,7 +13,10 @@ h1 {
 }
 
 .button-backModules {
-  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
 
   button {
     padding: 10px 20px;
